--- a/src/components/Rated/Rated.css
+++ b/src/components/Rated/Rated.css
@@ -3,3 +3,11 @@
   gap: 32px;
   flex-wrap: wrap;
 }
+
+.search {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  padding-bottom: 10px;
+}
